sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:17: error: Unmatched closing brace '}' ignored here
  }} 
  ^