sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.code
def bubbleSort3() {
  var a=true
  for (i <- getValueCount()-1 to 0 by -1){
    if (a==false){
      return
    }
  for (j <- 0 to i-1){
    a=false
    if (!isSmaller(j,j+1)){
      swap(j,j+1)
      a=true
		}

}
}
  }}